[gd_scene load_steps=7 format=2]

[ext_resource path="res://objects/vehicle/Vehicle.tscn" type="PackedScene" id=1]
[ext_resource path="res://objects/enemy/enemy_base.gd" type="Script" id=2]
[ext_resource path="res://objects/enemy/puke/splash-kotze.mp3" type="AudioStream" id=3]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="CircleShape2D" id=2]

[sub_resource type="CircleShape2D" id=3]

[node name="EnemyBase" type="Node2D"]
script = ExtResource( 2 )

[node name="Vehicle" parent="." instance=ExtResource( 1 )]

[node name="AreaSlowdown" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="ShapeSlowdown" type="CollisionShape2D" parent="AreaSlowdown"]
shape = SubResource( 1 )

[node name="AreaAttack" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="ShapeAttack" type="CollisionShape2D" parent="AreaAttack"]
shape = SubResource( 2 )

[node name="AreaBody" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="ShapeBody" type="CollisionShape2D" parent="AreaBody"]
shape = SubResource( 3 )

[node name="TimerSlowdownCooldown" type="Timer" parent="."]

[node name="TimerAttackCooldown" type="Timer" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
